Bump max perm size for test runs up to 128M, since we reached a tipping point recently causing the precompiled run to blow up on some platforms/JVMs. Part of JRUBY-2778.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@7140 961051c9-f516-0410-bf72-c9f7e237a7b7